--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "start": "NODE_DEBUG=engine:rendering rocket start --open",
     "build": "rocket build",
     "dev": "npm start",
-    "preview": "rocket preview --open",
-    "deploy": "npm run build && gh-pages -d _site -b build"
+    "preview": "rocket preview --open"
   },
   "devDependencies": {
     "@rocket/cli": "^0.20.0",
     "@rocket/components": "^0.2.0",
     "@rocket/engine": "^0.2.0",
     "@rocket/spark": "^0.2.0",
-    "gh-pages": "^4.0.0",
     "lit": "^2.3.0"
   },
   "@rocket/template-name": "Landing Page (@rocket/spark Theme)",
