--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "preview": "rocket preview --open"
   },
   "devDependencies": {
-    "@rocket/cli": "^0.20.0",
+    "@rocket/cli": "^0.20.4",
     "@rocket/components": "^0.2.0",
-    "@rocket/engine": "^0.2.0",
+    "@rocket/engine": "^0.2.7",
     "@rocket/spark": "^0.2.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "lit": "^2.3.0",
+    "plugins-manager": "^0.3.1",
     "super-tiny-icons": "^0.4.0"
   },
   "@rocket/template-name": "Landing Page (@rocket/spark Theme)",
@@ -23,6 +25,8 @@
     "#src/*": "./site/src/*"
   },
   "dependencies": {
+    "@holochain-playground/elements": "^0.1.4",
+    "@holochain-playground/simulator": "^0.1.1",
     "simple-icons": "^8.4.0"
   }
 }
