--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "description": "A landing page based on the spark theme",
   "type": "module",
   "scripts": {
-    "start": "NODE_DEBUG=engine:rendering ./node_modules/.bin/rocket start --open",
-    "build": "./node_modules/.bin/rocket build",
+    "start": "NODE_DEBUG=engine:rendering rocket start --open",
+    "build": "rocket build",
     "dev": "npm start",
     "preview": "rocket preview --open"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
-    "@rocket/cli": "^0.20.4",
+    "@rocket/cli": "^0.21.0",
     "@rocket/components": "^0.2.0",
     "@rocket/engine": "^0.2.7",
     "@rocket/spark": "^0.2.0",
     "@rollup/plugin-replace": "^5.0.2",
+    "@web/dev-server": "^0.4.3",
+    "@web/dev-server-rollup": "^0.6.1",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "lit": "^3.0.0",
     "plugins-manager": "^0.3.1",
