--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
     "start": "NODE_DEBUG=engine:rendering rocket start --open",
     "build": "rocket build",
     "dev": "npm start",
-    "preview": "rocket preview --open"
+    "preview": "rocket preview --open",
+    "publish": "npm run build && gh-pages -d _site"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@rocket/cli": "^0.21.0",
+    "@rocket/engine": "^0.2.7",
+    "@rocket/spark": "^0.2.0",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@web/dev-server": "^0.4.3",
+    "@web/dev-server-rollup": "^0.6.1",
+    "gh-pages": "^6.1.1",
+    "plugins-manager": "^0.3.1"
   },
   "@rocket/template-name": "Landing Page (@rocket/spark Theme)",
   "imports": {
@@ -17,20 +29,12 @@
   "dependencies": {
     "@holochain-playground/elements": "^0.1.4",
     "@holochain-playground/simulator": "^0.1.1",
-    "@scoped-elements/cytoscape": "^0.1.1",
-    "lit-svelte-stores": "^0.2.3",
-    "simple-icons": "^8.4.0",
-    "@babel/preset-env": "^7.23.9",
-    "@rocket/cli": "^0.21.0",
     "@rocket/components": "^0.2.0",
-    "@rocket/engine": "^0.2.7",
-    "@rocket/spark": "^0.2.0",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@web/dev-server": "^0.4.3",
-    "@web/dev-server-rollup": "^0.6.1",
+    "@scoped-elements/cytoscape": "^0.1.1",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "lit": "^3.0.0",
-    "plugins-manager": "^0.3.1",
+    "lit-svelte-stores": "^0.2.3",
+    "simple-icons": "^8.4.0",
     "super-tiny-icons": "^0.4.0"
   }
 }
