--- a/package.json
+++ b/package.json
@@ -1,39 +1,15 @@
 {
-  "name": "rocket-landing-theme-spark",
-  "version": "0.0.1",
+  "name": "site",
   "private": true,
-  "description": "A landing page based on the spark theme",
   "type": "module",
   "scripts": {
-    "start": "NODE_DEBUG=engine:rendering rocket start --open",
-    "build": "rocket build",
-    "dev": "npm start",
-    "preview": "rocket preview --open",
-    "publish": "npm run build && gh-pages -d _site"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.23.9",
-    "@rocket/cli": "file:~/projects/rocket/packages/cli",
-    "@rocket/engine": "file:~/projects/rocket/packages/engine",
-    "@rocket/spark": "file:~/projects/rocket/presets/spark",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@web/dev-server": "^0.4.3",
-    "@web/dev-server-rollup": "^0.6.1",
-    "gh-pages": "^6.1.1",
-    "plugins-manager": "^0.3.1"
-  },
-  "@rocket/template-name": "Landing Page (@rocket/spark Theme)",
-  "imports": {
-    "#src/*": "./site/src/*"
+    "start": "vite",
+    "build": "vite build"
   },
   "dependencies": {
-    "@holochain-playground/elements": "^0.1.4",
-    "@holochain-playground/simulator": "^0.1.1",
-    "@rocket/components": "file:~/projects/rocket/packages/components",
-    "@scoped-elements/cytoscape": "^0.1.1",
-    "@webcomponents/template-shadowroot": "^0.2.1",
-    "lit": "^3.0.0",
-    "simple-icons": "^8.4.0",
-    "super-tiny-icons": "^0.4.0"
+    "@rocket/components": "^0.2.0",
+    "http-server": "^14.1.1",
+    "lit": "^3.1.3",
+    "vite": "^4.0.0"
   }
 }
