--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@rocket/components": "^0.2.0",
+    "@mdi/js": "^7.4.47",
+    "@shoelace-style/shoelace": "^2.15.0",
     "http-server": "^14.1.1",
     "lit": "^3.1.3",
     "vite": "^4.0.0"
